[package]
name = "weather_sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.12"  # Raspberry Pi Peripheral Access Library
async-std = "1.10"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }